<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>


    <!-- Diálogo Reiniciar -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar la partida</string>
    <string name="txtDialogoReiniciarPregunta">¿Desea reiniciar la partida?</string>
    <string name="txtDialogoReiniciarAfirmativo">Sí</string>
    <string name="txtDialogoReiniciarNegativo">No</string>


    <!-- Diálogo Restaurar -->
    <string name="txtDialogoRestaurarTitulo">Restaurar la partida</string>
    <string name="txtDialogoRestaurarPregunta">¿Desea restaurar la partida y perder el progreso actual?</string>
    <string name="txtDialogoRestaurarAfirmativo">Sí</string>
    <string name="txtDialogoRestaurarNegativo">No</string>

    <!-- Diálogo Borrar -->
    <string name="txtDialogoBorrarTitulo">Borrar los resultados</string>
    <string name="txtDialogoBorrarPregunta">¿Desea borrar los resultados ?</string>
    <string name="txtDialogoBorrarAfirmativo">Sí</string>
    <string name="txtDialogoBorrarNegativo">No</string>
    <string name="txtMensajeoBorrarError">No existen registros para borrar</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>


    <!-- Ranking -->
    <string name="prefTituloCategoria3">Ajustes del ranking</string>
    <string name="key_Ranking">ranking</string>
    <bool   name="default_prefRanking">false</bool>
    <string name="txtPrefRanking">Filtrar por usuario</string>
    <string name="txtPrefRankingDescription">
                    Si se activa esta opción se filtrará el top de resultados por el nombre de los usuarios.
    </string>


    <!-- Tarjeta SD -->
    <string name="key_TarjetaSD">utilizarTarjetaSD</string>
    <bool   name="default_prefTarjetaSD">false</bool>
    <string name="default_NombreFich">gameSolitarioCelta.txt</string>
    <string name="txtPrefTarjetaSD">Almacenamiento en tarjeta SD</string>
    <string name="txtErrorMemExterna">
            ERROR: No es posible acceder a la memoria externa
    </string>
    <string name="txtPrefTarjetaSDExplicación">
                    Si se activa esta opción se almacenará la información
                    en la tarjeta SD (si está disponible)
    </string>

    <!-- Guardar y Recuperar -->
    <string name="guardarPartida">La partida ha sido guardada</string>
    <string name="errorRestore">No existen partidas guardadas</string>
    <!-- Guardar BD -->
    <string name="guarduarPuntuacionError">La puntuación no se ha podido guardar</string>

    <!-- User -->
    <string name="key_NameUser">pref_NombreJugador</string>
    <string name="default_NameUser">User</string>

    <!-- Ranking -->
    <string name="prefTituloRanking">Ranking de Puntuaciones</string>
    <string name="key_List">pref_Score</string>

    <!-- Botones -->
    <string name="prefButtonDelete">Borrar Registros</string>

    <!--Contador-->
    <string name="nameContador">Número de fichas:</string>

    <!--Grid-->
    <string name="gridName">Nombre</string>
    <string name="gridHour">Fecha y Hora</string>
    <string name="gridFichas">Fichas</string>
    <string name="gridTime">Tiempo</string>


</resources>