<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="@string/key_NameUser"
            android:defaultValue="@string/default_NameUser"
            android:title="@string/prefTituloNombreJugador"
            android:summary="@string/prefTextoNombreJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <SwitchPreference
            android:key="@string/key_TarjetaSD"
            android:title="@string/txtPrefTarjetaSD"
            android:defaultValue="@bool/default_prefTarjetaSD"
            android:summary="@string/txtPrefTarjetaSDExplicación" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria3">
        <SwitchPreference
            android:key="@string/key_Ranking"
            android:title="@string/prefTituloRanking"
            android:defaultValue="@bool/default_prefRanking"
            android:summary="@string/txtPrefRankingDescription" />
    </PreferenceCategory>
</PreferenceScreen>
